# nodio

./: README.md  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
backend/src/: settings.py
docs/: README.md  docs.asta
docs/vision/: vision-document.md
frontend/: Dockerfile  package-lock.json
